# simple-protocols

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  build.rs  deny.toml  docker-compose.yaml
.github/: dependabot.yaml
.github/workflows/: audit.yaml  ci.yaml
data/: README.md  quotes.txt  users.json
src/: fs.rs  main.rs  tcp.rs  udp.rs  utils.rs
src/services/: active.rs  chargen.rs  daytime.rs  discard.rs  echo.rs  gopher.rs  mod.rs  qotd.rs  time.rs
src/services/message/: mod.rs  v1.rs  v2.rs
tests/: active.rs  chargen.rs  daytime-spspecific.rs  daytime.rs  discard.rs  echo.rs  gopher-spspecific.rs  gopher.rs  main-spspecific.rs  message-1.rs  message-2.rs  qotd.rs  time.rs
