[package]
name = "simple-protocols"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"
description = "Implementations of several simple network protocols"
keywords = ["Echo", "Discard", "Daytime", "CHARGEN", "Time"]
repository = "https://github.com/janm-dev/simple-protocols"
rust-version = "1.76.0"

[features]
default = [
	"echo",
	"discard",
	"active",
	"daytime",
	"qotd",
	"message-1",
	"message-2",
	"chargen",
	"time",
	"gopher",
]
echo = []
discard = []
active = []
daytime = []
qotd = []
message-1 = []
message-2 = []
chargen = []
time = []
gopher = []

[dependencies]
anyhow = "1.0.93"
async-std = { version = "1.13.0", features = [
	"attributes",
] }
const-str = "0.5.7"
ctrlc = "3.4.5"
env_logger = "0.11.5"
futures = { version = "0.3.31", default-features = false, features = [
	"std",
	"async-await",
] }
log = { version = "0.4.22", features = ["std"] }
pico-args = { version = "0.5.0", features = [
	"eq-separator",
] }
rand = "0.8.5"
socket2 = "0.5.7"
time = { version = "0.3.36", features = ["formatting"] }

[build-dependencies]
decancer = "3.2.8"
ignore = "0.4.23"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"

[dev-dependencies]
time = { version = "0.3.36", features = ["parsing"] }

[target.'cfg(unix)'.dev-dependencies]
nix = { version = "0.29.0", features = ["signal"] }

[profile.release]
codegen-units = 1
debug = "full"
debug-assertions = false
incremental = false
lto = "thin"
opt-level = 3
overflow-checks = false
panic = "unwind"
