[package]
name = "simple-protocols"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2024"
description = "Implementations of several simple network protocols"
keywords = ["Echo", "Discard", "Daytime", "CHARGEN", "Time"]
repository = "https://github.com/janm-dev/simple-protocols"
rust-version = "1.85.0"

[features]
default = [
	"echo",
	"discard",
	"active",
	"daytime",
	"qotd",
	"message-1",
	"message-2",
	"chargen",
	"time",
	"gopher",
]
echo = []
discard = []
active = []
daytime = []
qotd = []
message-1 = []
message-2 = []
chargen = []
time = []
gopher = []

[dependencies]
anyhow = "1.0.98"
const-str = "0.6.2"
ctrlc = "3.4.6"
env_logger = "0.11.6"
futures = { version = "0.3.31", default-features = false, features = [
	"std",
	"async-await",
] }
log = { version = "0.4.27", features = ["std"] }
pico-args = { version = "0.5.0", features = [
	"eq-separator",
] }
rand = "0.9.1"
smol = "2.0.2"
socket2 = "0.5.9"
time = { version = "0.3.41", features = ["formatting"] }

[build-dependencies]
decancer = "3.2.8"
ignore = "0.4.23"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[dev-dependencies]
time = { version = "0.3.41", features = ["parsing"] }

[target.'cfg(unix)'.dev-dependencies]
nix = { version = "0.30.1", features = ["signal"] }

[profile.release]
codegen-units = 1
debug = "full"
debug-assertions = false
incremental = false
lto = "thin"
opt-level = 3
overflow-checks = false
panic = "unwind"
